share/test/regression/type_check/fail/issue_60h.v
wire x;
initial begin 
  $write(x, x);
  $finish;
end
